--- a/FrontEnd/.env
+++ b/FrontEnd/.env
@@ -1,4 +1,4 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="agroconnect_db"
-CORS_ORIGINS="*"
-SECRET_KEY="agroconnect-secret-key-change-in-production"
+REACT_APP_BACKEND_URL=https://harvestdirect-3.preview.emergentagent.com
+WDS_SOCKET_PORT=443
+REACT_APP_ENABLE_VISUAL_EDITS=true
+ENABLE_HEALTH_CHECK=false
